k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invpy-svc
spec:
  selector:
    app: invpy-svc
  ports:
  - port: 80
    targetPort: 8000
